prevent sidebar from shrinking too much

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 .menu_side {
     display: flex;
     flex-direction: column;
+    min-width: 11em;
 }
 
 .menu_side h1 {
